--- a/api/package.json
+++ b/api/package.json
@@ -1,9 +1,9 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,5 +14,6 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql": "^2.18.1"
-  }
+  },
+  "description": ""
 }
