--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,6 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,6 +12,7 @@
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1"
   },
   "description": ""
