--- a/app/SeqMine/package.json
+++ b/app/SeqMine/package.json
@@ -21,6 +21,8 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "bootswatch": "^5.2.3",
+    "font-awesome": "^4.7.0",
+    "install": "^0.13.0",
     "jquery": "^3.6.3",
     "ngx-cookie-service": "^15.0.0",
     "ngx-pagination": "^6.0.3",
